compiler/tests/should-pass/delegation/shoud-pass-tests/Add10.via
fun add10(a: int{alice}, b: out int{bob}) {
    out b = declassify (endorse a to {alice & bob<-} from {alice}) + 10 to {(alice|bob)-> & (alice&bob)<-};
}

fun main() {
    val array = Array[int]{bob}(10);
    val a: int{alice} = 0;
    add10(a, val b);
    output a to alice;
    output b to bob;
}

host alice
host bob
